fix: alignment

--- a/src/containers/Home/styles.css
+++ b/src/containers/Home/styles.css
@@ -13,3 +13,7 @@
 .center-text {
   text-align: center;
 }
+
+.align-items-center {
+  align-items: center;
+}
